--- a/ios/r10/Info.plist
+++ b/ios/r10/Info.plist
@@ -72,6 +72,9 @@
 		<string>Zocial.ttf</string>
 		<string>antfill.ttf</string>
 		<string>antoutline.ttf</string>
+		<string>Montserrat-Light.ttf</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>BurbankBigRegular-Black.otf</string>
 	</array>
 </dict>
 </plist>
