--- a/package.json
+++ b/package.json
@@ -1,40 +1,49 @@
 {
-  "name": "r10",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@ant-design/react-native": "^3.1.8",
-    "apollo-boost": "^0.4.0",
-    "apollo-cache-inmemory": "^1.6.0",
-    "apollo-client": "^2.6.0",
-    "apollo-link": "^1.2.11",
-    "apollo-link-error": "^1.1.10",
-    "apollo-link-state": "^0.4.2",
-    "babel-plugin-import": "^1.11.2",
-    "graphql": "^14.3.1",
-    "graphql-tag": "^2.10.1",
-    "react": "16.8.3",
-    "react-apollo": "^2.5.6",
-    "react-apollo-hooks": "^0.4.5",
-    "react-native": "0.59.8",
-    "react-native-gesture-handler": "^1.2.1",
-    "react-native-linear-gradient": "^2.5.4",
-    "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.11.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/runtime": "^7.4.5",
-    "babel-jest": "^24.8.0",
-    "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.54.1",
-    "react-test-renderer": "16.8.3"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+	"name": "r10",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"@ant-design/react-native": "^3.1.8",
+		"apollo-boost": "^0.4.0",
+		"apollo-cache-inmemory": "^1.6.0",
+		"apollo-client": "^2.6.0",
+		"apollo-link": "^1.2.11",
+		"apollo-link-error": "^1.1.10",
+		"apollo-link-state": "^0.4.2",
+		"babel-plugin-import": "^1.11.2",
+		"graphql": "^14.3.1",
+		"graphql-tag": "^2.10.1",
+		"react": "16.8.3",
+		"react-apollo": "^2.5.6",
+		"react-apollo-hooks": "^0.4.5",
+		"react-art": "^16.8.6",
+		"react-native": "0.59.8",
+		"react-native-animatable": "^1.3.2",
+		"react-native-collapsible": "^1.4.0",
+		"react-native-gesture-handler": "^1.2.1",
+		"react-native-linear-gradient": "^2.5.4",
+		"react-native-vector-icons": "^6.4.2",
+		"react-native-web": "^0.11.4",
+		"react-navigation": "^3.11.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.4.5",
+		"@babel/runtime": "^7.4.5",
+		"babel-jest": "^24.8.0",
+		"jest": "^24.8.0",
+		"metro-react-native-babel-preset": "^0.54.1",
+		"react-test-renderer": "16.8.3"
+	},
+	"jest": {
+		"preset": "react-native"
+	},
+	"rnpm": {
+		"assets": [
+			"./assets/fonts/"
+		]
+	}
 }
