--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"@ant-design/react-native": "^3.1.8",
+		"@react-native-community/async-storage": "^1.4.2",
 		"apollo-boost": "^0.4.0",
 		"apollo-cache-inmemory": "^1.6.0",
 		"apollo-client": "^2.6.0",
@@ -17,6 +18,9 @@
 		"babel-plugin-import": "^1.11.2",
 		"graphql": "^14.3.1",
 		"graphql-tag": "^2.10.1",
+		"lodash": "^4.17.11",
+		"moment": "^2.24.0",
+		"moment-timezone": "^0.5.25",
 		"react": "16.8.3",
 		"react-apollo": "^2.5.6",
 		"react-apollo-hooks": "^0.4.5",
