--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"react-native-maps": "^0.24.2",
 		"react-native-vector-icons": "^6.4.2",
 		"react-native-web": "^0.11.4",
-		"react-navigation": "^3.11.0"
+		"react-navigation": "^3.11.0",
+		"use-force-update": "^1.0.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.4.5",
